# PassManager

./: .gitignore  CMakeLists.txt  LoginScreen.qml  PasswordForm.qml  PasswordList.qml  README.md  authclient.h  main.cpp  qml.qrc
botapp/: CMakeLists.txt  Dockerfile  main.cpp
client/: Main.qml  Settings.qml  SyncScreen.qml  authclient.cpp  main.cpp
